# JustC

./: CMakeLists.txt  README.md  TEST.c  main.c  makefile
algos/: CMakeLists.txt
algos/src/: algos.c
custom_libc/: CMakeLists.txt
custom_libc/inc/: custom_string.h
dataStructures/: CMakeLists.txt
dataStructures/inc/: btree.h  dlist.h  queue.h  rbuffer.h  slist.h  stack.h
dataStructures/src/: dlist.c  queue.c  rbuffer.c  slist.c  stack.c
edu/projects/TicTacToe/: Makefile  tictactoe.c
edu/projects/bmpEditor/: Makefile
edu/projects/bmpEditor/src/: main.c  (+1 more)
edu/projects/memoryAllocator/: Makefile
edu/projects/menu/: Makefile
edu/projects/parser/: Makefile
edu/theCompilationProcess/: including.h  program.c  program.i  program.s
games/: CMakeLists.txt  prog
inc/: TEST.h  algos.h  algos_config.h  cbuffer.h  clib.h  dlist.h  evnotif.h  rbuffer.h  slist.h  stack.h
inc/custom_libc/: custom_string.h
legacy/test/: TESTbtree.c  TESTevnotif.c  TESTqueue.c  TESTrbuffer.c  TESTrrsch.c  TESTstack.c
src/: CMakeLists.txt  algos.c  btree.c  cbuffer.c  clib.c  dlist.c  evnotif.c  rbuffer.c  rrsch.c  slist.c  stack.c
src/custom_libc/: custom_string.c
src/games/: main.c
src/test/: TESTdlist.c  TESTevnotif.c  TESTrbuffer.c  TESTrrsch.c  TESTslist.c  TESTstack.c
test/: CMakeLists.txt
test/custom_libc/: TEST__custom_string.cpp
test/dataStructures/: TEST__dlist.cpp  TEST__queue.cpp  TEST__rbuffer.cpp  TEST__slist.cpp  TEST__stack.cpp
tests/: CMakeLists.txt  rbufferTEST.c
utils/: CMakeLists.txt
utils/inc/: rrsch.h
utils/src/: evnotif.c  rrsch.c
(+10 files in other folders)
